objects/ESN_MB_Article__c.object
<CustomObject>
    <description>ESN_MB MyBrands Article: Object to store MyBrands app Web Article</description>
    <fields>
        <fullName>ESN_MB_Abstract__c</fullName>
        <description>Contains the article small description.</description>
        <label>Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_AlsoInMasterbrand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then this article will appear in both its product and the masterbrand</description>
        <inlineHelpText>If this field is checked, then this article will appear in both its product and the masterbrand</inlineHelpText>
        <label>Also In Masterbrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Apply_To_All_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the article has to be applyed to all the products (as News Cover)</description>
        <label>Apply To All Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Bottom_Text__c</fullName>
        <description>Bottom description text of a web Article for MyBrand Application</description>
        <label>Bottom Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_Scope_Text__c</fullName>
        <description>Stores the Name of the Brand</description>
        <inlineHelpText>Stores the Name of the Brand</inlineHelpText>
        <label>Brand Scope Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Embedded_Video__c</fullName>
        <description>Field to store the HTML snippet from Youtube or Vimeo</description>
        <label>Embedded Video</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ExtId__c</fullName>
        <description>Ext Id used for data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>Ext Id used for data migration</inlineHelpText>
        <label>ESN_MB_ExtId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ESN_MB_FlagSplashScreen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESN_MB_FlagSplashScreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_LinkRelatedAssets__c</fullName>
        <label>Link Related Assets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Node_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Brand or product node page lookup</description>
        <inlineHelpText>Brand or product node page lookup</inlineHelpText>
        <label>Node Page</label>
        <referenceTo>ESN_MB_NodePage__c</referenceTo>
        <relationshipLabel>MyBrands Articles</relationshipLabel>
        <relationshipName>MyBrands_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ParentArticle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MyBrands Parent Article</label>
        <referenceTo>ESN_MB_Article__c</referenceTo>
        <relationshipLabel>MyBrands Articles Drafts</relationshipLabel>
        <relationshipName>MyBrands_Drafts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Stage__c</fullName>
        <description>Define stage of Articles, Draft, published, archived</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Top_Text__c</fullName>
        <description>Top description text of a web Article for MyBrand Application</description>
        <label>Top Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MyBrands Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESN_MB_Apply_To_All_Products__c</columns>
        <columns>ESN_MB_Stage__c</columns>
        <columns>ESN_MB_Node_Page__c</columns>
        <columns>ESN_MB_Abstract__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Draft</fullName>
        <columns>NAME</columns>
        <columns>ESN_MB_Apply_To_All_Products__c</columns>
        <columns>ESN_MB_Stage__c</columns>
        <columns>ESN_MB_Node_Page__c</columns>
        <columns>ESN_MB_Abstract__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_MB_Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All Draft</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_published</fullName>
        <columns>NAME</columns>
        <columns>ESN_MB_Apply_To_All_Products__c</columns>
        <columns>ESN_MB_Stage__c</columns>
        <columns>ESN_MB_Node_Page__c</columns>
        <columns>ESN_MB_Abstract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_MB_Stage__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>All published</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyBrands Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>